# rma

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  README.md  README.rst  contributing  oca_dependencies.txt  test-requirements.txt
__unported__/: crm_claim_ext.py
crm_claim/: __manifest__.py  crm_claim.py  crm_claim_data.xml  crm_claim_demo.xml  crm_claim_menu.xml  crm_claim_view.xml  res_partner_view.xml
crm_claim_categ_as_name/: __init__.py  __openerp__.py  claim.py  claim_view.xml  crm_claim_rma.py  crm_claim_rma_view.xml
crm_claim_code/: README.rst  __init__.py  __manifest__.py  __openerp__.py
crm_claim_ext/: __init__.py  __openerp__.py  crm_claim_ext.py  crm_claim_ext_view.xml
crm_claim_number/: README.rst  __init__.py  __openerp__.py  crm_claim.py  crm_claim_data.xml  crm_claim_view.xml
crm_claim_partner_foreign/: README.md  __openerp__.py
crm_claim_product_supplier/: README.md  README.rst  __init__.py  __openerp__.py
crm_claim_rma/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_invoice.py  account_invoice_view.xml  crm_claim_rma.py  crm_claim_rma_data.xml  crm_claim_rma_view.xml  exceptions.py  invoice_line_warranty.py  res_company.py  res_company_view.xml  res_partner_view.xml  rma_data.xml  rma_substate_data.xml  stock.py  stock_data.xml  stock_view.xml
crm_claim_rma_code/: README.rst  __init__.py  __manifest__.py  __openerp__.py
crm_claim_rma_config/: README.rst  __init__.py  __openerp__.py  (+4 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1363 files in other folders)
