[project]
name = "odoo-addons-oca-rma"
version = "17.0.20241023.0"
dependencies = [
    "odoo-addon-product_warranty>=17.0dev,<17.1dev",
    "odoo-addon-rma>=17.0dev,<17.1dev",
    "odoo-addon-rma_lot>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
